fixed overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -132,7 +132,6 @@ table td.content a:hover {
 }
 table td.content div.info {
 	padding-bottom: 10px;
-	line-height: 7px;
 }
 table td.reply-count {
 	text-align: right;
